--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --watch -d",
     "start": "node app.js",
-    "start:debug": "DEBUG=* node app.js"
+    "start:debug": "DEBUG=* node app.js",
+    "dev": "node js/index.js & webpack --watch -d"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "webpack": "^4.12.0"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "webpack-cli": "^3.0.8"
   }
 }
